--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: pages/home
 ---
-
-<h1>Hello World</h1>
+<div class="btn-group btn-group-justified">
+    <a href="javascript:void(0)" class="btn btn-default">Left</a>
+    <a href="javascript:void(0)" class="btn btn-default">Middle</a>
+    <a href="javascript:void(0)" class="btn btn-default">Right</a>
+</div>
+<button class="btn btn-default" data-ripple-color="#000">Custom ripple</button>
